# django-gandalf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_IDEAS.md  LIFECYCLE.md  README.md  examples.py  implementation.py  justfile  main.py  pyproject.toml
.codex/: setup.sh
.github/workflows/: django-matrix.yml  functional-tests.yml  tests.yml  unit-tests.yml
benchmarks/: __init__.py  __main__.py  instrumentation.py  journey.py  settings.py  wizards.py
examples/: __init__.py  core.py  flows.py  forms.py  views.py  wizards.py
gandalf/: __init__.py  escapes.py  file_storage.py  form_views.py  forms.py  runtime.py  steps.py  storage.py  tree.py  viewsets.py  wizard.py  wizards.py
gandalf/templates/gandalf/: management_form.html
gandalf/templatetags/: gandalf.py
tests/: serve_settings.py  settings.py  test_forms.py  test_storage.py  test_templatetags.py  test_viewset.py  test_wizards.py
tests/functional/: test_expand.py  test_readme_examples.py  test_walk_cost.py  test_wizard_viewset.py
tests/testapp/: counting.py  forms.py  readme_examples.py  urls.py  views.py
tests/testapp/templates/testapp/: editing_wizard.html  file_upload_wizard.html  index.html  linear_wizard.html  other_linear_wizard.html  recreated_linear_wizard.html  single_step_wizard.html
tests/testapp/templates/tests/testapp/: wizard_step.html
tests/unit/: test_escapes.py  test_expand_runtime.py  test_file_storage.py  test_storage.py  test_tree.py  test_viewsets.py  test_wizards.py
