[project]
name = "django-gandalf"
version = "0.1.0"
description = "A framework for building form wizards using Django forms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Django>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
