[project]
name = "django-gandalf"
version = "0.1.0"
description = "A framework for building form wizards using Django forms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "django>=4.2,<6.1",
]

[dependency-groups]
dev = [
    "ipdb~=0.13.13",
    "pytest~=8.3.5",
    "pytest-cov~=7.1.0",
    "pytest-django~=4.11.1",
    "pytest-sugar~=1.1.1",
]
lint = [
    "pre-commit~=4.1.0",
    "ruff~=0.9.10",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = "."
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["gandalf"]

[tool.coverage.report]
fail_under = 100
show_missing = true
